--- a/src/main/resources/com/winson121/quiz/demo/quiz.fxml
+++ b/src/main/resources/com/winson121/quiz/demo/quiz.fxml
@@ -4,11 +4,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winson121.quiz.demo.QuizController">
+<AnchorPane fx:id="anchorpane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="643.0" prefWidth="1220.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winson121.quiz.demo.QuizController">
    <children>
-      <TextArea fx:id="question" layoutX="43.0" layoutY="14.0" prefHeight="142.0" prefWidth="494.0" text="1. How many consonants are there in the English Alphabets?" wrapText="true" />
-      <TilePane fx:id="tilepane" layoutX="43.0" layoutY="213.0" orientation="VERTICAL" prefHeight="165.0" prefWidth="561.0" tileAlignment="TOP_LEFT" vgap="5.0" />
-      <Button fx:id="next" layoutX="626.0" layoutY="361.0" mnemonicParsing="false" style="-fx-background-color: #99ffcc;" text="Next">
+<!--      <TextArea fx:id="question" layoutX="43.0" layoutY="14.0" prefHeight="142.0" prefWidth="494.0" text="1. How many consonants are there in the English Alphabets?" wrapText="true" />-->
+<!--      <TilePane fx:id="tilepane" layoutX="43.0" layoutY="213.0" orientation="VERTICAL" prefHeight="165.0" prefWidth="561.0" tileAlignment="TOP_LEFT" vgap="5.0" />-->
+      <Button fx:id="next" layoutX="1125.0" layoutY="581.0" mnemonicParsing="false" style="-fx-background-color: #99ffcc;" text="Next">
          <font>
             <Font name="Arial Bold Italic" size="13.0" />
          </font>
